Switching logo to SVG and fixing overflow issue on mobile

--- a/react-ui/src/components/styles.main-content-block.scss
+++ b/react-ui/src/components/styles.main-content-block.scss
@@ -4,6 +4,7 @@
     background: #eee;
     position: relative;
     min-height: 40vw;
+    overflow: hidden;
 
     @media(min-width: $global-max-width) {
         min-height: 510px;
